# rsgit

./: CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  to-do.md
.github/workflows/: clippy.yml  code-fmt.yml  coverage.yml  rust-fmt.yml  tests.yml
cli/: Cargo.toml
cli/src/: app.rs  bin.rs  find_repo.rs  temp_cwd.rs
cli/src/cmds/: find_repo.rs  hash_object.rs  init.rs  mod.rs
cli/tests/: common.rs  t0000_basic.rs  t1007_hash_object.rs
configs/: grcov.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/object/: attribution.rs  check_commit.rs  check_tag.rs  check_tree.rs  content_source.rs  file_content_source.rs  kind.rs  mod.rs
core/src/path/: file_mode.rs
core/src/repo/: mod.rs
on_disk/: Cargo.toml
on_disk/src/: lib.rs  temp_git_repo.rs
on_disk/src/on_disk_repo/: mod.rs
on_disk/src/on_disk_repo/tests/: new.rs  put_loose_object.rs
on_disk/src/tests/: new.rs  put_loose_object.rs
src/: attribution.rs  bin.rs  content_source.rs  file_content_source.rs  file_mode.rs  git_path.rs  lib.rs  object.rs  path_mode.rs
src/cli/: bin.rs  find_repo.rs  hash_object.rs  init.rs  mod.rs
src/object/: attribution.rs  check_commit.rs  check_tag.rs  check_tree.rs  content_source.rs  file_content_source.rs  id.rs  kind.rs  mod.rs  parse_utils.rs  read_content_source.rs
src/on_disk_repo/: mod.rs
src/path/: mod.rs  path_mode.rs
src/repo/: error.rs  mod.rs
src/repo/on_disk/: init.rs  mod.rs
src/repo/on_disk/tests/: mod.rs  new.rs  put_loose_object.rs
src/test_support/: mod.rs  temp_cwd.rs  temp_git_repo.rs
tests/: common.rs  t0000_basic.rs
