[package]
name = "rsgit"
version = "0.1.0"
authors = ["Eric Scouten <eric@scouten.com>"]
edition = "2018"

# We use the C-language version of zlib for now because the Rust implementation
# doesn't match git's implementation byte-for-byte. Possible we could swap out
# implementations later, but not for now.

[dependencies]
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
sha-1 = "0.9.0"
tempfile = "3.1.0"
thiserror = "1.0.20"
unicode-normalization = "0.1.13"

[dev-dependencies]
dir-diff = "0.3.2"
